change base href for testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,8 +61,8 @@
         </div>
       </div>
 
-      <div class="row Block__FindPlugin w-100">
-        <app-find-plugin class="w-100"></app-find-plugin>
+      <div class="row Block__FindPlugin">
+        <app-find-plugin class="col w-100"></app-find-plugin>
       </div>
 
       <div class="row mt-2 p-5">
