change base href for testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,13 +74,13 @@
           </p>
         </div>
         <div class="col-md-6 text-center">
-          <img src="/assets/images/homekit-ecosystem.png" width="100%">
+          <img src="assets/images/homekit-ecosystem.png" width="100%">
         </div>
       </div>
 
       <div class="row mt-2 p-5" style="background-color: #f8f7fa;">
         <div class="col-md-6 text-center">
-          <img src="/assets/images/homebridge-ui.png" width="100%">
+          <img src="assets/images/homebridge-ui.png" width="100%">
         </div>
         <div class="col-md-6">
           <h5>Simple User Interface</h5>
@@ -122,8 +122,9 @@
         <span> | </span>
         Logo by <a href="https://github.com/ggabogarcia">Gabriel Garcia</a>
         <span> | </span>
-        &copy; <a href="https://github.com/homebridge/homebridge/graphs/contributors">Homebridge Contributors</a>
-        {{ currentYear }}
+        &copy; {{ currentYear }} <a href="https://github.com/homebridge/homebridge/graphs/contributors">
+          Homebridge Contributors
+        </a>
       </p>
     </footer>
   </div>
