fix mobile view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar fixed-top navbar-dark">
+<nav class="navbar navbar-dark">
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item"><a class="nav-link" title="Homebridge GitHub" href="https://github.com/homebridge">
+    <li class="nav-item"><a class="nav-link" title="Homebridge GitHub" href="https://github.com/homebridge/homebridge">
         <fa-icon [icon]="faGithub"></fa-icon>
       </a></li>
     <li class="nav-item"><a class="nav-link" title="Homebridge Discord" href="https://discord.gg/kqNCe2D">
