--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -1,4 +1,4 @@
-<div class="container platforms d-flex flex-row justify-content-center" style="margin-top: 20px;">
+<div class="container platforms d-flex flex-row justify-content-between" style="margin-top: 20px;">
 
   <ng-container *ngFor="let platform of platforms">
 
