full width design

--- a/src/app/find-plugin/find-plugin.component.html
+++ b/src/app/find-plugin/find-plugin.component.html
@@ -1,9 +1,9 @@
-<div>
+<div class="Block__FindPlugin">
   <h2>
     Find a Plugin
   </h2>
   <p>
-    Integrations are built by the community, and tagged as homebridge-plugin on NPM.
+    Integrations are built by the community, and tagged as <em>homebridge-plugin</em> on NPM.
   </p>
   <form id="searchForm" (ngSubmit)="submitForm()">
     <span>
