--- a/src/app/platform-selector/platform-selector.component.scss
+++ b/src/app/platform-selector/platform-selector.component.scss
@@ -1,4 +1,5 @@
 .platforms {
+  z-index: 10000;
   max-width: 550px;
 
   .platform-box {
@@ -15,6 +16,7 @@
 .platform-box {
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
+  z-index: 1000;
 
   &:hover {
     cursor: pointer;
@@ -43,5 +45,17 @@
     display: none;
     margin-bottom: -47px;
     margin-top: -47px;
+  }
+}
+
+.display-platform-help {
+  z-index: 100;
+  color: #ffffff;
+  background-color: rgb(0 0 0 / 0.2);
+  max-width: 550px;
+  border-radius: 5px;
+
+  p {
+    opacity: 0.66;
   }
 }
