--- a/src/scss/background.scss
+++ b/src/scss/background.scss
@@ -114,21 +114,13 @@
   }
 }
 
-.Masthead {
-  color: #fff;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-  width: 100%;
+.rellax {
+  z-index: -999;
 }
+
 #commandParallax {
-  top: 0;
   opacity: 0.33;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  position: fixed;
-  z-index: -10000;
+  z-index: -1000;
 }
 #commandParallax .command {
   position: absolute;
@@ -149,14 +141,14 @@
   opacity: 0.66;
 }
 #commandParallax .command.__lvl3 {
-  font-size: 12px;
-  filter: blur(4px);
-  opacity: 0.45;
+  font-size: 16px;
+  filter: blur(3px);
+  opacity: 0.66;
 }
 #commandParallax .command.__lvl4 {
-  font-size: 8px;
-  filter: blur(6px);
-  opacity: 0.2;
+  font-size: 16px;
+  filter: blur(3px);
+  opacity: 0.66;
 }
 #commandParallax .command.__coffeeMachine {
   left: 15%;
@@ -185,7 +177,6 @@
 #commandParallax .command.__lvl4 span {
   animation: 11s level-4 linear;
 }
-
 
 @keyframes level-1 {
   0% {
@@ -279,101 +270,4 @@
 }
 .Button__Glass span {
   opacity: 0.9;
-}
-
-.autocomplete-suggestions {
-  text-align: left;
-  cursor: default;
-  border: 1px solid #ccc;
-  border-top: 0;
-  background: #fff;
-  box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.1);
-  /* core styles should not be changed */
-  position: absolute;
-  display: none;
-  z-index: 9999;
-  max-height: 254px;
-  overflow: hidden;
-  overflow-y: auto;
-  box-sizing: border-box;
-}
-
-.autocomplete-suggestion {
-  display: block;
-  position: relative;
-  padding: 0 0.6em;
-  line-height: 23px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 1.02em;
-  color: #333;
-}
-
-.autocomplete-suggestion b {
-  color: #140a33;
-}
-
-.autocomplete-suggestion.selected {
-  background: #140a33;
-  color: #fff;
-}
-.autocomplete-suggestion.selected b {
-  color: #fff;
-}
-
-.Block__FindPlugin {
-  background: #f8f7fa;
-  text-align: center;
-  padding: 40px 20px;
-}
-.Block__FindPlugin h2 {
-  margin-bottom: 5px;
-}
-.Block__FindPlugin p {
-  margin-top: 0;
-}
-.Block__FindPlugin span {
-  display: inline-block;
-  width: 100%;
-  max-width: 600px;
-  position: relative;
-}
-.Block__FindPlugin input {
-  width: 100%;
-  padding: 15px 10px;
-  padding-right: 150px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  border: 0 none;
-  border-radius: 6px;
-  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-  font-size: 18px;
-}
-.Block__FindPlugin input:focus,
-.Block__FindPlugin input:active {
-  outline: none;
-  box-shadow: 0 2px 10px rgba(20, 10, 51, 0.1);
-}
-.Block__FindPlugin input::-webkit-input-placeholder {
-  color: #e0e0e0;
-  font: inherit;
-}
-.Block__FindPlugin button {
-  width: 140px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
-  background: linear-gradient(to bottom, #8a36e3, #ab77e2);
-  color: white;
-  border: none;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  text-align: center;
-  padding: 1rem 2.25rem;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.075em;
 }
