--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-white mt-4 mb-4">
-  <div class="row p-5">
+<div class="bg-white mt-4 mb-4">
+  <div class="row p-5 section-block">
     <div class="col-md-6">
       <h4>Bringing HomeKit support where there is none</h4>
       <p>
@@ -37,11 +37,11 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="">
     <app-find-plugin class="col w-100"></app-find-plugin>
   </div>
 
-  <div class="row mt-2 p-5">
+  <div class="row mt-2 p-5 section-block">
     <div class="col-md-6">
       <h4>Control your devices anywhere</h4>
       <p>
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <div class="row mt-2 p-5" style="background-color: #f8f7fa;">
+  <div class="row mt-2 p-5 section-block" style="background-color: #f8f7fa;">
     <div class="col-md-6 text-center">
       <img src="assets/images/homebridge-ui.png" width="100%">
     </div>
@@ -95,7 +95,7 @@
   </div>
 
 
-  <div class="row mt-2 p-5">
+  <div class="row mt-2 p-5 section-block">
     <div class="col-md-6">
       <h4>Hardware & Installation</h4>
       <p>
