--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -41,3 +41,119 @@
     opacity: 0.66;
   }
 }
+
+.Logo {
+  display: inline-block;
+  border-radius: 100%;
+  background: #fff;
+  width: 133px;
+  height: 133px;
+  margin: 10px auto;
+  position: relative;
+  opacity: 0;
+  animation: appearUp 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards 1s;
+}
+
+.Logo__Featured svg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 85px;
+  overflow: visible;
+}
+.Logo__Featured svg mask path {
+  stroke-dasharray: 1300;
+  stroke-dashoffset: 1300;
+  animation: dash 3s linear forwards;
+  animation-delay: 1.75s;
+}
+.Logo__Featured svg g#base path {
+  fill: #000;
+  opacity: 0.3;
+}
+.Logo__Featured svg g#draw path {
+  fill: #000;
+  opacity: 0.8;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#FirstBand path {
+  animation: loadUp 0.6s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+}
+
+#FirstBand path:nth-child(1) {
+  animation-delay: 1.825s;
+}
+
+#FirstBand path:nth-child(2) {
+  animation-delay: 1.9s;
+}
+
+#FirstBand path:nth-child(3) {
+  animation-delay: 1.975s;
+}
+
+#FirstBand path:nth-child(4) {
+  animation-delay: 2.05s;
+}
+
+#FirstBand path:nth-child(5) {
+  animation-delay: 2.125s;
+}
+
+#SecondBand path {
+  animation: loadUp 0.6s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+}
+
+#SecondBand path:nth-child(1) {
+  animation-delay: 3.033s;
+}
+
+#SecondBand path:nth-child(2) {
+  animation-delay: 3.066s;
+}
+
+#SecondBand path:nth-child(3) {
+  animation-delay: 3.099s;
+}
+
+#SecondBand path:nth-child(4) {
+  animation-delay: 3.132s;
+}
+
+#SecondBand path:nth-child(5) {
+  animation-delay: 3.165s;
+}
+
+@keyframes loadUp {
+  0% {
+    transform: translateY(0);
+    opacity: 0.25;
+  }
+  50% {
+    transform: translateY(-2px);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes appearUp {
+  0% {
+    transform: translateY(25px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
