--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,11 +15,11 @@ h3,
 h4,
 h5 {
   font-weight: 600;
-  font-family: system;
 }
 
 body {
   height: 100vh;
+  font-family: "din-2014", system, sans-serif;
 }
 
 a {
