add note about home hubs

--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -43,7 +43,7 @@
 
   <div class="row mt-2 p-5 section-block">
     <div class="col-md-6">
-      <h4>Control your devices anywhere</h4>
+      <h4>Control your smart devices</h4>
       <p>
         Use your iPhone, iPad, Apple Watch, and Mac to control your Homebridge accessories and
         setup automations.
@@ -64,6 +64,11 @@
         <li>"Are the lights on downstairs?"</li>
         <li>"Turn off the fan in the living room."</li>
       </ul>
+      <p>
+        With the addition of a
+        <a href="https://support.apple.com/en-au/HT207057" target="_blank">home hub (AppleTV, HomePod or iPad)</a>
+        you can create powerful automations and securely control your devices even when you're not at home.
+      </p>
     </div>
     <div class="col-md-6 text-center">
       <img src="assets/images/homekit-ecosystem.png" width="100%">
