--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -41,4 +41,12 @@ a {
   background-color: #2d114c;
 }
 
+.text-pink {
+  color: #fd00ff;
+}
+
+.text-dark-purple {
+  color: #3d1a63;
+}
+
 @import "./background.scss";
