update qnap and unraid wiki links

--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -55,10 +55,16 @@
         Homebridge Docker on Linux Guide
       </a>
       <p class="mt-3">
-        If you have a Synology NAS, the Homebridge Synology Package is the best way to install Homebridge:
+        If you have a NAS, we provide installers for the following systems:
       </p>
       <a class="btn btn-lg btn-purple" href="https://github.com/oznu/homebridge-syno-spk#how-to-install">
-        Synology DSM Package
+        Synology DSM
+      </a> &nbsp;
+      <a class="btn btn-lg btn-purple" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
+        Unraid
+      </a> &nbsp;
+      <a class="btn btn-lg btn-purple" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-QNAP">
+        QNAP
       </a>
     </div>
 
