--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -57,13 +57,13 @@
       <p class="mt-3">
         If you have a NAS, we provide installers for the following systems:
       </p>
-      <a class="btn btn-lg btn-purple" href="https://github.com/oznu/homebridge-syno-spk#how-to-install">
+      <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/homebridge-syno-spk#how-to-install">
         Synology DSM
       </a> &nbsp;
-      <a class="btn btn-lg btn-purple" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
+      <a class="btn btn-lg btn-purple  mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
         Unraid
       </a> &nbsp;
-      <a class="btn btn-lg btn-purple" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-QNAP">
+      <a class="btn btn-lg btn-purple  mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-QNAP">
         QNAP
       </a>
     </div>
