--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -96,14 +96,14 @@
 
   <div class="row mt-2 p-5 section-block">
     <div class="col-md-6">
-      <h3>Homebridge <fa-icon [icon]="faHeart" class="text-pink"></fa-icon> Raspberry Pi</h3>
+      <h3>Homebridge <fa-icon [icon]="faHeart" class="homebridge-pink-300"></fa-icon> Raspberry Pi</h3>
       <p>
         The <a href="https://www.raspberrypi.org/" target="_blank">Raspberry Pi</a> is a low cost, credit-card sized
         computer that is perfect for running Homebridge.
       </p>
 
       <div class="d-flex flex-row">
-        <fa-icon [icon]="faSdCard" style="font-size: 60px;" class="mr-3 text-dark-purple"></fa-icon>
+        <fa-icon [icon]="faSdCard" style="font-size: 60px;" class="mr-3 homebridge-purple-400"></fa-icon>
         <div class="mt-2">
           <p>
             Homebridge provides a pre-made Raspberry Pi image. Once flashed to your SD card, you will have
