fix button colour

--- a/src/scss/base/buttons.scss
+++ b/src/scss/base/buttons.scss
@@ -3,17 +3,16 @@
 // Where all button types and button styles are styled
 ////////////////////////////////////////////////////////////////////////////////
 
-.btn-purple {
+.btn-purple,
+.btn-purple:visited {
+  background-color: $homebridge-purple-400;
+  border-color: $homebridge-purple-400;
+  color: $homebridge-white;
+
   &:active,
   &:hover,
   &:focus {
     background-color: $homebridge-purple-500;
     border-color: $homebridge-purple-500;
-  }
-
-  &:visited {
-    background-color: $homebridge-purple-400;
-    border-color: $homebridge-purple-400;
-    color: $homebridge-white;
   }
 }
