--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column h-100">
   <div class="w-100">
     <app-header></app-header>
-    <app-features></app-features>
+    <router-outlet></router-outlet>
     <app-footer></app-footer>
   </div>
 </div>
