--- a/src/app/pages/how-to-install-homebridge/how-to-install-homebridge.component.html
+++ b/src/app/pages/how-to-install-homebridge/how-to-install-homebridge.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white mb-4 container">
-  <div class="row p-5 section-block">
+  <div class="row pt-5 section-block">
 
     <div class="col-md-12">
 
@@ -135,8 +135,11 @@
         <hr>
 
         <p>
-          Homebridge can also run on other platforms, check our <a class="internal present">community contributed
-            guides</a> to see if your platform is listed.
+          Homebridge can also run on other platforms, check our
+          <a class="internal present" href="https://github.com/homebridge/homebridge/wiki/Other-Platforms">
+            community contributed guides
+          </a>
+          to see if your platform is listed.
         </p>
 
       </div>
