--- a/src/app/pages/official-raspberry-pi-image/official-raspberry-pi-image.component.html
+++ b/src/app/pages/official-raspberry-pi-image/official-raspberry-pi-image.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white mb-4 container">
-  <div class="row p-5 section-block">
+  <div class="row pt-5 section-block">
     <div class="col-md-12">
 
       <h1>Homebridge Raspberry Pi Image</h1>
@@ -27,6 +27,8 @@
       <div class="text-center mt-4">
         <h3>
           <fa-icon [icon]="faDownload" class="text-dark-purple mr-2"></fa-icon>
+        </h3>
+        <h3>
           <a href="https://github.com/homebridge/homebridge-raspbian-image/releases/latest" target="_blank">
             Download Homebridge Raspberry Pi Image
           </a>
