update various things

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/homebridge/homebridge/wiki">Documentation</a>
+          <a class="nav-link" href="https://github.com/homebridge/homebridge/wiki">Homebridge Wiki</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://developers.homebridge.io">Plugin API</a>
+          <a class="nav-link" href="https://developers.homebridge.io">Plugin Developer Docs</a>
         </li>
       </ul>
     </div>
