--- a/src/app/pages/features/features.component.html
+++ b/src/app/pages/features/features.component.html
@@ -9,25 +9,35 @@
       <p>Some of the most popular plugins include:</p>
       <ul>
         <li>
-          <a href="https://www.npmjs.com/package/homebridge-ring" target="_blank">Ring</a>
+          <a href="https://github.com/dgreif/ring/tree/master/homebridge#readme" target="_blank">Ring</a>
         </li>
         <li>
-          <a href="https://www.npmjs.com/package/homebridge-nest" target="_blank">Nest</a> &amp;
-          <a href="https://www.npmjs.com/package/homebridge-nest-cam" target="_blank">Nest Cameras</a>
+          <a href="https://github.com/chrisjshull/homebridge-nest#readme" target="_blank">Nest</a> &amp;
+          <a href="https://github.com/Brandawg93/homebridge-nest-cam#readme" target="_blank">Nest Cameras</a>
         </li>
         <li>
-          <a href="https://www.npmjs.com/package/homebridge-tplink-smarthome" target="_blank">
+          <a href="https://github.com/plasticrake/homebridge-tplink-smarthome#readme" target="_blank">
             TP-Link Kasa Smart Home
           </a>
         </li>
         <li>
-          <a href="https://www.npmjs.com/package/homebridge-hue" target="_blank">
+          <a href="https://github.com/ebaauw/homebridge-hue#readme" target="_blank">
             Hue / deCONZ (Zigbee)
           </a>
         </li>
         <li>
-          <a href="https://www.npmjs.com/package/homebridge-harmony" target="_blank">
-            Logitech Harmony
+          <a href="https://github.com/bwp91/homebridge-platform-wemo#readme" target="_blank">
+            Belkin Wemo
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/hjdhjd/homebridge-myq#readme" target="_blank">
+            myQ
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/hjdhjd/homebridge-unifi-protect#readme" target="_blank">
+            UniFi Protect
           </a>
         </li>
       </ul>
@@ -114,14 +124,14 @@
       <div class="text-center">
         <h5>
           <fa-icon [icon]="faDownload" class="text-dark-purple mr-2"></fa-icon>
-          <a href="https://github.com/homebridge/homebridge-raspbian-image/releases/latest" target="_blank">
-            Download Homebridge Raspberry Pi Image
+          <a href="https://github.com/homebridge/homebridge-raspbian-image/wiki/Getting-Started" target="_blank">
+            Flash Homebridge Raspberry Pi Image
           </a>
         </h5>
         <p>
-          Follow the
-          <a href="https://github.com/homebridge/homebridge-raspbian-image/wiki/Getting-Started">Getting Started</a>
-          guide for setup instructions.
+          Or just
+          <a href="https://github.com/homebridge/homebridge-raspbian-image/releases/latest">download</a>
+          the latest image.
         </p>
       </div>
 
