--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -26,10 +26,18 @@
     <div *ngSwitchCase="'linux'">
       <h4>Homebridge on Linux</h4>
       <p>Homebridge will work on any Linux platform that can run Node.js.</p>
-      <a class="btn btn-lg btn-purple"
+      <a class="btn btn-lg btn-purple  mt-2"
         href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Debian-or-Ubuntu-Linux">
-        Install on Debian / Ubuntu Linux
-      </a>
+        Debian / Ubuntu
+      </a>&nbsp;
+      <a class="btn btn-lg btn-purple  mt-2"
+        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Red-Hat%2C-CentOS-or-Fedora-Linux">
+        CentOS / Fedora
+      </a>&nbsp;
+      <a class="btn btn-lg btn-purple mt-2"
+        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Arch-Linux">
+        Arch Linux
+      </a>&nbsp;
     </div>
 
     <div *ngSwitchCase="'macos'">
@@ -49,21 +57,20 @@
       </p>
 
       <a class="btn btn-lg btn-purple" href="https://github.com/oznu/docker-homebridge">Homebridge Docker Image</a>
-      <br>
-      <a class="btn btn-lg btn-purple mt-3"
-        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Docker">
-        Homebridge Docker on Linux Guide
-      </a>
       <p class="mt-3">
-        If you have a NAS, we provide installers for the following systems:
+        Setup guides:
       </p>
+      <a class="btn btn-lg btn-purple mt-1"
+        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Docker">
+        Linux
+      </a>&nbsp;
       <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/homebridge-syno-spk#how-to-install">
         Synology DSM
       </a> &nbsp;
-      <a class="btn btn-lg btn-purple  mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
+      <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
         Unraid
       </a> &nbsp;
-      <a class="btn btn-lg btn-purple  mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-QNAP">
+      <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-QNAP">
         QNAP
       </a>
     </div>
