update the raspberry-pi-image page

--- a/src/app/pages/official-raspberry-pi-image/official-raspberry-pi-image.component.html
+++ b/src/app/pages/official-raspberry-pi-image/official-raspberry-pi-image.component.html
@@ -9,6 +9,10 @@
         computer that is perfect for running Homebridge.
       </p>
 
+      <div class="text-center">
+        <img class="RaspberryPi mt-2" src="assets/images/raspberry-pi.svg" height="200px">
+      </div>
+
       <p>
         Homebridge provides a pre-made Raspberry Pi image. Once flashed to your SD card, you will have Homebridge up and
         running in minutes.
@@ -23,6 +27,32 @@
         </li>
         <li>Visual configuration for over 400 plugins (no manual config.json editing required)</li>
       </ul>
+
+      <hr class="mt-5">
+
+      <h4>Flash with Raspberry Pi Imager</h4>
+
+      <p>
+        The easiest way to flash the
+        <a href="https://github.com/homebridge/homebridge-raspbian-image" target="_blank">
+          Homebridge Raspberry Pi Image
+        </a>
+        to your SD card is to use the
+        <a href="https://www.raspberrypi.org/software/" target="_blank">Raspberry Pi Imager</a>.
+      </p>
+
+      <p>
+        Follow the
+        <a href="https://github.com/homebridge/homebridge-raspbian-image/wiki/Getting-Started">Getting Started</a>
+        guide for full setup instructions, including how to connect your device to WiFi.
+      </p>
+
+      <p align="center">
+        <img src="https://user-images.githubusercontent.com/3979615/117293909-58f99f80-aeb5-11eb-922c-37029f071481.gif"
+          width="600">
+      </p>
+
+      <hr class="mt-5">
 
       <div class="text-center mt-4">
         <h3>
@@ -40,9 +70,6 @@
         </p>
       </div>
 
-      <div class="text-center">
-        <img class="RaspberryPi mt-2" src="assets/images/raspberry-pi.svg" height="200px">
-      </div>
 
 
 
