default min height

--- a/src/app/redirects/redirects.component.html
+++ b/src/app/redirects/redirects.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex w-100">
-  <div [style]="divStyle" class="d-flex d-column justify-content-center pt-5 pb-3 w-100">
+  <div [style]="divStyle" class="redirect-info d-flex d-column justify-content-center pt-5 pb-3 w-100">
     <div class="text-center">
       <p>Redirecting to:</p>
       <h5>
