--- a/src/app/redirects/redirects.component.html
+++ b/src/app/redirects/redirects.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex w-100">
-  <div [style]="divStyle" class="redirect-info d-flex d-column justify-content-center pt-5 pb-3 w-100">
+  <div class="redirect-info d-flex d-column justify-content-center pt-5 pb-3 pl-1 pr-1 w-100">
     <div class="text-center">
-      <p>Redirecting to:</p>
-      <h5>
-        <a [href]="url">{{ url }}</a>
-      </h5>
+      <h2>
+        <fa-icon [icon]="faSync" [spin]="true"></fa-icon>
+      </h2>
+      <p>Redirecting...</p>
     </div>
   </div>
 </div>
