update synology setup guide link

--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -64,7 +64,8 @@
         href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Docker">
         Linux
       </a>&nbsp;
-      <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/homebridge-syno-spk#how-to-install">
+      <a class="btn btn-lg btn-purple mt-1"
+        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Synology-DSM">
         Synology DSM
       </a> &nbsp;
       <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
