--- a/src/app/platform-selector/platform-selector.component.html
+++ b/src/app/platform-selector/platform-selector.component.html
@@ -66,7 +66,7 @@
       </a>&nbsp;
       <a class="btn btn-lg btn-purple mt-1"
         href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Synology-DSM">
-        Synology DSM
+        Synology DSM 7
       </a> &nbsp;
       <a class="btn btn-lg btn-purple mt-1" href="https://github.com/oznu/docker-homebridge/wiki/Homebridge-on-Unraid">
         Unraid
@@ -77,16 +77,11 @@
     </div>
 
     <div *ngSwitchCase="'windows'">
-      <h4>Homebridge on Windows 10</h4>
-      <p>Windows 10 Pro / Edu / Enterprise users should install Homebridge using Hyper-V:</p>
+      <h4>Homebridge on Windows 10 / 11</h4>
+      <p>Windows 10 / 11 Pro / Edu / Enterprise can install Homebridge using a Hyper-V image:</p>
       <a class="btn btn-lg btn-purple"
         href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Windows-10-Using-Hyper-V">
-        Install Homebridge Windows 10 with Hyper-V
-      </a>
-      <p class="mt-3">Windows 10 Home Edition:</p>
-      <a class="btn btn-lg btn-purple"
-        href="https://github.com/homebridge/homebridge/wiki/Install-Homebridge-on-Windows-10">
-        Install Homebridge on Windows 10
+        Install Homebridge Windows 10 / 11 with Hyper-V
       </a>
     </div>
 
