Accessibility and SEO improvements

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-column mt-auto w-100 pr-1 pl-1">
+<footer class="d-flex flex-column mt-auto w-100 pr-1 pl-1 homebridge-purple-200">
   <p>
     Homebridge is brought to you by thousands of plugin developers, dozens of core contributors, <a
       href="https://twitter.com/pieceofsummer">@pieceofsummer</a> who reverse-engineered HomeKit, <a
