--- a/src/app/pages/features/features.component.html
+++ b/src/app/pages/features/features.component.html
@@ -43,7 +43,7 @@
       </ul>
     </div>
     <div class="col-md-6 text-center">
-      <img src="assets/images/logos.png" width="80%">
+      <img src="assets/images/logos.png" alt="" width="80%">
     </div>
   </div>
 
@@ -81,13 +81,13 @@
       </p>
     </div>
     <div class="col-md-6 text-center">
-      <img src="assets/images/homekit-ecosystem.png" width="100%">
+      <img src="assets/images/homekit-ecosystem.png" alt="" width="100%">
     </div>
   </div>
 
   <div class="row mt-2 p-5 section-block" style="background-color: #f8f7fa;">
     <div class="col-md-6 text-center">
-      <img src="assets/images/homebridge-ui.png" width="100%">
+      <img src="assets/images/homebridge-ui.png" alt="" width="100%">
     </div>
     <div class="col-md-6">
       <h3>Simple user interface</h3>
@@ -157,7 +157,7 @@
       </ul>
     </div>
     <div class="col-md-6 text-center">
-      <img class="RaspberryPi mt-2" src="assets/images/raspberry-pi.svg" width="80%">
+      <img class="RaspberryPi mt-2" src="assets/images/raspberry-pi.svg" alt="" width="80%">
     </div>
   </div>
 
