--- a/src/scss/base/colors.scss
+++ b/src/scss/base/colors.scss
@@ -9,6 +9,7 @@
 $homebridge-white: #fff;
 
 // Purple
+$homebridge-purple-200: #c084ff;
 $homebridge-purple-300: #8a36e3; // Base colour
 $homebridge-purple-400: #3d1a63;
 $homebridge-purple-500: #2d114c;
