--- a/src/app/pages/features/features.component.html
+++ b/src/app/pages/features/features.component.html
@@ -31,8 +31,8 @@
           </a>
         </li>
         <li>
-          <a href="https://github.com/hjdhjd/homebridge-myq#readme" target="_blank">
-            myQ
+          <a href="https://github.com/OpenWonderLabs/homebridge-switchbot#readme" target="_blank">
+            SwitchBot
           </a>
         </li>
         <li>
@@ -93,12 +93,13 @@
       <h3>Simple user interface</h3>
       <p>
         The <a href="https://github.com/oznu/homebridge-config-ui-x">Homebridge UI</a> provides an easy to use
-        interface to manage your Homebridge plugins, configuration and accessories.
+        interface to manage your Homebridge plugins, configuration, and accessories.
       </p>
       <ul>
         <li>Install and configure Homebridge plugins</li>
-        <li>Monitor your Homebridge server via a fully customisable widget-based dashboard</li>
+        <li>Monitor your Homebridge server via a fully customizable widget-based dashboard</li>
         <li>View and control Homebridge accessories</li>
+        <li>Create child bridge for each Homebridge plugin</li>
         <li>Backup and Restore your Homebridge instance</li>
       </ul>
     </div>
