--- a/src/app/pages/features/features.component.html
+++ b/src/app/pages/features/features.component.html
@@ -99,7 +99,7 @@
         <li>Install and configure Homebridge plugins</li>
         <li>Monitor your Homebridge server via a fully customizable widget-based dashboard</li>
         <li>View and control Homebridge accessories</li>
-        <li>Create child bridge for each Homebridge plugin</li>
+        <li>Create a child bridge for each Homebridge plugin</li>
         <li>Backup and Restore your Homebridge instance</li>
       </ul>
     </div>
